Finalize Video Effects optimalization

--- a/project.html
+++ b/project.html
@@ -43,7 +43,7 @@
   <div id="projects" class="section-7-copy wf-section">
     <div class="div-block-17">
       <div class="text-block-3-copy textbody-copy test-copy">RESPONIBLE AI APP<br>PROTOTYPE</div>
-      <p class="paragraph-3">This prototype contains my image classification algorithm using Deep Neural Networks. This algorithm incorporates multiple key aspects: better fairness, transparency, explainability, and less bias that is shown in this application. With this, artificial intelligence specialists can use my application for other use-cases regarding image classification.</p><img src="images/prototypeless-1.png" loading="eager" sizes="(max-width: 767px) 99vw, 100vw" srcset="images/prototypeless-1-p-500.png 500w, images/prototypeless-1-p-800.png 800w, images/prototypeless-1-p-1080.png 1080w, images/prototypeless-1.png 2000w" alt="" class="image-8">
+      <p class="paragraph-3">This prototype contains my image classification algorithm using Deep Neural Networks. This algorithm incorporates multiple key aspects: better fairness, transparency, explainability, and less bias that is shown in this application. With this, artificial intelligence specialists can use my application for other use-cases regarding image classification.</p><img src="images/prototypeless-1.png" loading="eager" sizes="(max-width: 991px) 99vw, 850px" srcset="images/prototypeless-1-p-500.png 500w, images/prototypeless-1-p-800.png 800w, images/prototypeless-1-p-1080.png 1080w, images/prototypeless-1.png 2000w" width="700" alt="" class="image-8">
     </div>
     <div class="div-block-16">
       <div id="contact" class="text-block-7">GET IN TOUCH</div>
