--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
   </div>
   <div id="nav" data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
     <div class="container-5 w-container">
-      <div class="div-block-10"><img sizes="(max-width: 479px) 100vw, (max-width: 991px) 20px, 100vw" srcset="images/linkedin-p-500.png 500w, images/linkedin.png 512w" loading="lazy" src="images/linkedin.png" alt="" class="image-3 imagenav"><img sizes="(max-width: 479px) 100vw, (max-width: 991px) 20px, 100vw" srcset="images/mail-p-500.png 500w, images/mail.png 512w" loading="lazy" src="images/mail.png" alt="" class="image-3 imagenav"><img loading="lazy" src="images/github.png" alt="" class="image-3 imagenav"></div>
-      <nav role="navigation" class="nav-menu w-nav-menu"><img sizes="(max-width: 991px) 100vw, 1vw" srcset="images/linkedin-p-500.png 500w, images/linkedin.png 512w" loading="lazy" src="images/linkedin.png" alt="" class="image-3-copy imagenav-copy image3"><img sizes="(max-width: 991px) 100vw, 1vw" srcset="images/mail-p-500.png 500w, images/mail.png 512w" loading="lazy" src="images/mail.png" alt="" class="imagenav-copy image-3-copy image-3"><img loading="lazy" src="images/GitHub-Mark-64px.png" alt="" class="image-3 imagenav-copy image-3-copy"></nav>
+      <div class="div-block-10"><img sizes="(max-width: 479px) 100vw, (max-width: 991px) 60px, 100vw" srcset="images/linkedin-p-500.png 500w, images/linkedin.png 512w" loading="lazy" src="images/linkedin.png" alt="" class="image-3 imagenav"><img sizes="(max-width: 479px) 100vw, (max-width: 991px) 60px, 100vw" srcset="images/mail-p-500.png 500w, images/mail.png 512w" loading="lazy" src="images/mail.png" alt="" class="image-3 imagenav"><img loading="lazy" src="images/github.png" alt="" class="image-3 imagenav"></div>
+      <nav role="navigation" class="nav-menu w-nav-menu"><img sizes="(max-width: 991px) 100vw, 42px" srcset="images/linkedin-p-500.png 500w, images/linkedin.png 512w" loading="lazy" src="images/linkedin.png" alt="" class="image-3-copy imagenav-copy image3"><img sizes="(max-width: 991px) 100vw, 45px" srcset="images/mail-p-500.png 500w, images/mail.png 512w" loading="lazy" src="images/mail.png" alt="" class="imagenav-copy image-3-copy image-3"><img loading="lazy" src="images/GitHub-Mark-64px.png" alt="" class="image-3 imagenav-copy image-3-copy"></nav>
       <a href="index.html" aria-current="page" class="nav-link-2 w-nav-link w--current">HOME</a>
       <a href="#me" class="nav-link-2 w-nav-link">THIS IS ME</a>
       <a href="#projects" class="nav-link-2 w-nav-link">PROJECTS</a>
@@ -45,7 +45,7 @@
   <div id="me" class="div-block-6">
     <div id="w-node-b98edfbd-1e5b-d761-f529-27b3b025f539-646812b4" class="text-block-3 textbody titlebody">THIS IS ME</div>
     <div class="div-block-11">
-      <div class="div-block-13"><img src="images/1-min.jpg" loading="lazy" id="w-node-b14eb39a-6ea8-ce51-a23f-86d331192498-646812b4" srcset="images/1-min-p-500.jpeg 500w, images/1-min-p-800.jpeg 800w, images/1-min-p-1080.jpeg 1080w, images/1-min-p-1600.jpeg 1600w, images/1-min-p-2000.jpeg 2000w, images/1-min.jpg 2554w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 28vw, 170px" alt="" class="image-5">
+      <div class="div-block-13"><img src="images/1-min.jpg" loading="lazy" id="w-node-b14eb39a-6ea8-ce51-a23f-86d331192498-646812b4" srcset="images/1-min-p-500.jpeg 500w, images/1-min-p-800.jpeg 800w, images/1-min-p-1080.jpeg 1080w, images/1-min-p-1600.jpeg 1600w, images/1-min-p-2000.jpeg 2000w, images/1-min.jpg 2554w" sizes="(max-width: 479px) 100vw, 170px" alt="" class="image-5">
         <div class="div-block-14"><img src="images/straight-quotes.png" loading="lazy" data-w-id="7d1ee65f-7c4f-ba5d-70ef-48b9fc8adcf6" alt="" class="image-6"><img src="images/straight-quotes.png" loading="lazy" data-w-id="3950ee8a-d912-886c-ad29-a55fbf93bf68" alt="" class="image-7">
           <div class="text-block-5"><span class="text-span"><strong class="bold-text">My goal is to help organizations navigate through the new future of intelligence<br></strong></span></div>
         </div>
@@ -56,24 +56,24 @@
     </div>
   </div>
   <div id="projects" class="section-7 wf-section">
+    <div class="div-block-19-copy">
+      <div data-poster-url="https://uploads-ssl.webflow.com/62c17bc1f49c32e14cd178e7/62c4338d8db42175c0b7a803_CompressedVideo (2) (1)_2-poster-00001.jpg" data-video-urls="videos/Compressed_video.mp4" data-autoplay="true" data-loop="true" data-wf-ignore="true" class="background-video-5 w-background-video w-background-video-atom"><video id="61572f27-bbef-e5e4-c9df-d344e69c13f8-video" autoplay="" loop="" style="background-image:url(&quot;https://uploads-ssl.webflow.com/62c17bc1f49c32e14cd178e7/62c4338d8db42175c0b7a803_CompressedVideo (2) (1)_2-poster-00001.jpg&quot;)" muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover">
+          <source src="videos/Compressed_video.mp4" data-wf-ignore="true">
+          <source src="videos/Compressed_video.mp4" data-wf-ignore="true">
+        </video></div>
+    </div>
     <div class="div-block-17">
-      <div class="div-block-19-copy">
-        <div data-poster-url="https://uploads-ssl.webflow.com/62c17bc1f49c32e14cd178e7/62c2e35a5008627118796fa3_CompressedVideo (2) (1)-poster-00001.jpg" data-video-urls="https://uploads-ssl.webflow.com/62c17bc1f49c32e14cd178e7/62c2e35a5008627118796fa3_CompressedVideo (2) (1)-transcode.mp4,https://uploads-ssl.webflow.com/62c17bc1f49c32e14cd178e7/62c2e35a5008627118796fa3_CompressedVideo (2) (1)-transcode.webm" data-autoplay="true" data-loop="true" data-wf-ignore="true" class="background-video-3-copy w-background-video w-background-video-atom"><video id="177b7b96-ef2c-ad88-9b04-902719eabdb9-video" autoplay="" loop="" style="background-image:url(&quot;https://uploads-ssl.webflow.com/62c17bc1f49c32e14cd178e7/62c2e35a5008627118796fa3_CompressedVideo (2) (1)-poster-00001.jpg&quot;)" muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover">
-            <source src="https://uploads-ssl.webflow.com/62c17bc1f49c32e14cd178e7/62c2e35a5008627118796fa3_CompressedVideo (2) (1)-transcode.mp4" data-wf-ignore="true">
-            <source src="https://uploads-ssl.webflow.com/62c17bc1f49c32e14cd178e7/62c2e35a5008627118796fa3_CompressedVideo (2) (1)-transcode.webm" data-wf-ignore="true">
-          </video></div>
-      </div>
       <div class="text-block-3-copy textbody-copy test-copy">PROJECTS</div>
       <div class="container-6">
         <div class="pricing-wrapper">
-          <div id="w-node-_4c28239c-adc3-f9b0-f829-2c653b733f28-646812b4" data-w-id="4c28239c-adc3-f9b0-f829-2c653b733f28" class="pricing-card"><img src="images/dashboard.png" loading="lazy" srcset="images/dashboard-p-500.png 500w, images/dashboard-p-800.png 800w, images/dashboard-p-1080.png 1080w, images/dashboard-p-1600.png 1600w, images/dashboard-p-2000.png 2000w, images/dashboard.png 2095w" sizes="100vw" alt="" class="pricing-image">
+          <div id="w-node-_4c28239c-adc3-f9b0-f829-2c653b733f28-646812b4" data-w-id="4c28239c-adc3-f9b0-f829-2c653b733f28" class="pricing-card"><img src="images/dashboard.png" loading="lazy" srcset="images/dashboard-p-500.png 500w, images/dashboard-p-800.png 800w, images/dashboard-p-1080.png 1080w, images/dashboard-p-1600.png 1600w, images/dashboard-p-2000.png 2000w, images/dashboard.png 2095w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 86vw, (max-width: 991px) 319.9921875px, 256.6484375px" alt="" class="pricing-image">
             <h2 class="pricing-title">RESPONSIVE<br>YOUTHCARE DASHBOARD</h2>
             <div class="pricing-subtitle">January, 2022</div>
             <a href="#" class="button-primary outline-button w-button">Show</a>
             <div class="pricing-divider"></div>
             <p class="paragraph">In collaboration with the municipality of Oosterhout, I have made a responsive dashboard to visualize their youth care dataset.</p>
           </div>
-          <div id="w-node-_4c28239c-adc3-f9b0-f829-2c653b733f48-646812b4" class="pricing-card featured-pricing"><img src="images/prototype.png" loading="lazy" srcset="images/prototype-p-500.png 500w, images/prototype-p-800.png 800w, images/prototype-p-1080.png 1080w, images/prototype-p-1600.png 1600w, images/prototype-p-2000.png 2000w, images/prototype.png 2591w" sizes="100vw" alt="" class="pricing-image">
+          <div id="w-node-_4c28239c-adc3-f9b0-f829-2c653b733f48-646812b4" class="pricing-card featured-pricing"><img src="images/prototype.png" loading="lazy" srcset="images/prototype-p-500.png 500w, images/prototype-p-800.png 800w, images/prototype-p-1080.png 1080w, images/prototype-p-1600.png 1600w, images/prototype-p-2000.png 2000w, images/prototype.png 2591w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 86vw, (max-width: 991px) 319.9921875px, 256.65625px" alt="" class="pricing-image">
             <h2 class="pricing-title">RESPONIBLE AI <br>APP PROTOTYPE</h2>
             <div class="pricing-subtitle">April, 2022</div>
             <a href="project.html" class="button-primary outline-button w-button">Show</a>
@@ -81,7 +81,7 @@
             <div class="pricing-tag">Featured</div>
             <p class="paragraph">I made a prototype of an app to teach AI specialists, how to implement certain fairness &amp; explainability methods into their deep learning model by proposing a framework using my own model as an example.<br></p>
           </div>
-          <div id="w-node-_4c28239c-adc3-f9b0-f829-2c653b733f70-646812b4" data-w-id="4c28239c-adc3-f9b0-f829-2c653b733f70" class="pricing-card"><img src="images/site.png" loading="lazy" srcset="images/site-p-500.png 500w, images/site-p-800.png 800w, images/site-p-1080.png 1080w, images/site.png 1457w" sizes="100vw" alt="" class="pricing-image">
+          <div id="w-node-_4c28239c-adc3-f9b0-f829-2c653b733f70-646812b4" data-w-id="4c28239c-adc3-f9b0-f829-2c653b733f70" class="pricing-card"><img src="images/site.png" loading="lazy" srcset="images/site-p-500.png 500w, images/site-p-800.png 800w, images/site-p-1080.png 1080w, images/site.png 1457w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 86vw, (max-width: 991px) 319.984375px, 256.6640625px" alt="" class="pricing-image">
             <h2 class="pricing-title">CUSTOMER WEBSITE<br>FOR A BEAUTY SALON</h2>
             <div class="pricing-subtitle">2021</div>
             <a href="#" class="button-primary outline-button w-button">Show</a>
@@ -91,22 +91,16 @@
         </div>
       </div>
     </div>
-    <div class="div-block-19">
-      <div data-poster-url="https://uploads-ssl.webflow.com/62c17bc1f49c32e14cd178e7/62c2d91a206fc25864900dc1_fa8588faaa46af17b4f89d27836ea466 (1)-poster-00001.jpg" data-video-urls="https://uploads-ssl.webflow.com/62c17bc1f49c32e14cd178e7/62c2d91a206fc25864900dc1_fa8588faaa46af17b4f89d27836ea466 (1)-transcode.mp4,https://uploads-ssl.webflow.com/62c17bc1f49c32e14cd178e7/62c2d91a206fc25864900dc1_fa8588faaa46af17b4f89d27836ea466 (1)-transcode.webm" data-autoplay="true" data-loop="true" data-wf-ignore="true" class="background-video-3 w-background-video w-background-video-atom"><video id="51674c0e-bac1-9e75-932b-d4f087218cf5-video" autoplay="" loop="" style="background-image:url(&quot;https://uploads-ssl.webflow.com/62c17bc1f49c32e14cd178e7/62c2d91a206fc25864900dc1_fa8588faaa46af17b4f89d27836ea466 (1)-poster-00001.jpg&quot;)" muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover">
-          <source src="https://uploads-ssl.webflow.com/62c17bc1f49c32e14cd178e7/62c2d91a206fc25864900dc1_fa8588faaa46af17b4f89d27836ea466 (1)-transcode.mp4" data-wf-ignore="true">
-          <source src="https://uploads-ssl.webflow.com/62c17bc1f49c32e14cd178e7/62c2d91a206fc25864900dc1_fa8588faaa46af17b4f89d27836ea466 (1)-transcode.webm" data-wf-ignore="true">
-        </video></div>
-    </div>
-    <div class="div-block-19">
-      <div data-poster-url="videos/CompressedVideo-poster-00001.jpg" data-video-urls="videos/CompressedVideo-transcode.mp4,videos/CompressedVideo-transcode.webm" data-autoplay="true" data-loop="true" data-wf-ignore="true" class="background-video-3 w-background-video w-background-video-atom"><video id="8de214b1-3f78-71e8-e3b0-5e9c90652127-video" autoplay="" loop="" style="background-image:url(&quot;videos/CompressedVideo-poster-00001.jpg&quot;)" muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover">
-          <source src="videos/CompressedVideo-transcode.mp4" data-wf-ignore="true">
-          <source src="videos/CompressedVideo-transcode.webm" data-wf-ignore="true">
-        </video></div>
-    </div>
     <div class="div-block-16">
       <div id="contact" class="text-block-7">GET IN TOUCH</div>
-      <div class="div-block-18"><img src="images/linkedin.png" loading="lazy" srcset="images/linkedin-p-500.png 500w, images/linkedin.png 512w" sizes="20px" alt="" class="image-3 imagenav"><img src="images/mail.png" loading="lazy" srcset="images/mail-p-500.png 500w, images/mail.png 512w" sizes="20px" alt="" class="image-3 imagenav"><img src="images/GitHub-Mark-120px-plus.png" loading="lazy" alt="" class="image-3 imagenav"></div>
+      <div class="div-block-18"><img src="images/linkedin.png" loading="lazy" srcset="images/linkedin-p-500.png 500w, images/linkedin.png 512w" sizes="(max-width: 479px) 94vw, 70px" alt="" class="image-3 imagenav"><img src="images/mail.png" loading="lazy" srcset="images/mail-p-500.png 500w, images/mail.png 512w" sizes="(max-width: 479px) 94vw, 70px" alt="" class="image-3 imagenav"><img src="images/GitHub-Mark-120px-plus.png" loading="lazy" alt="" class="image-3 imagenav"></div>
       <p class="paragraph-2">Michael Nederhoed | Portfolio Showcase</p>
+    </div>
+    <div class="div-block-19">
+      <div data-poster-url="https://uploads-ssl.webflow.com/62c17bc1f49c32e14cd178e7/62c4338d8db42175c0b7a803_CompressedVideo (2) (1)_2-poster-00001.jpg" data-video-urls="videos/Compressed_video.mp4" data-autoplay="true" data-loop="true" data-wf-ignore="true" class="background-video-4 w-background-video w-background-video-atom"><video id="4ea85baf-bb23-ff8d-825c-853197fc5127-video" autoplay="" loop="" style="background-image:url(&quot;https://uploads-ssl.webflow.com/62c17bc1f49c32e14cd178e7/62c4338d8db42175c0b7a803_CompressedVideo (2) (1)_2-poster-00001.jpg&quot;)" muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover">
+          <source src="videos/Compressed_video.mp4" data-wf-ignore="true">
+          <source src="videos/Compressed_video.mp4" data-wf-ignore="true">
+        </video></div>
     </div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=62c17bc1f49c32e14cd178e7" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
