Background Video Compatibility

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html><
 <html data-wf-page="62c2f8bce7fe5c8d646812b4" data-wf-site="62c17bc1f49c32e14cd178e7">
 <head>
   <meta charset="utf-8">
@@ -35,7 +35,11 @@
   <div id="nav" data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
     <div class="container-5 w-container">
       <div class="div-block-10"><img sizes="(max-width: 479px) 100vw, (max-width: 991px) 60px, 100vw" srcset="images/linkedin-p-500.png 500w, images/linkedin.png 512w" loading="lazy" src="images/linkedin.png" alt="" class="image-3 imagenav"><img sizes="(max-width: 479px) 100vw, (max-width: 991px) 60px, 100vw" srcset="images/mail-p-500.png 500w, images/mail.png 512w" loading="lazy" src="images/mail.png" alt="" class="image-3 imagenav"><img loading="lazy" src="images/github.png" alt="" class="image-3 imagenav"></div>
-      <nav role="navigation" class="nav-menu w-nav-menu"><img sizes="(max-width: 991px) 100vw, 42px" srcset="images/linkedin-p-500.png 500w, images/linkedin.png 512w" loading="lazy" src="images/linkedin.png" alt="" class="image-3-copy imagenav-copy image3"><img sizes="(max-width: 991px) 100vw, 45px" srcset="images/mail-p-500.png 500w, images/mail.png 512w" loading="lazy" src="images/mail.png" alt="" class="imagenav-copy image-3-copy image-3"><img loading="lazy" src="images/GitHub-Mark-64px.png" alt="" class="image-3 imagenav-copy image-3-copy"></nav>
+      <nav role="navigation" class="nav-menu w-nav-menu">
+        <a href="http://kedin.com/in/michaelnederhoed/" class="w-inline-block"><img sizes="(max-width: 991px) 100vw, 42px" srcset="images/linkedin-p-500.png 500w, images/linkedin.png 512w" loading="lazy" src="images/linkedin.png" alt="" class="image-3-copy imagenav-copy image3"></a>
+        <a href="mailto:michaelnederhoed@icloud.com?subject=Contact" class="w-inline-block"><img sizes="(max-width: 991px) 100vw, 45px" srcset="images/mail-p-500.png 500w, images/mail.png 512w" loading="lazy" src="images/mail.png" alt="" class="imagenav-copy image-3-copy image-3"></a>
+        <a href="https://github.com/MichaelNed/PortfolioMichael" class="w-inline-block"><img loading="lazy" src="images/GitHub-Mark-64px.png" alt="" class="image-3 imagenav-copy image-3-copy"></a>
+      </nav>
       <a href="index.html" aria-current="page" class="nav-link-2 w-nav-link w--current">HOME</a>
       <a href="#me" class="nav-link-2 w-nav-link">THIS IS ME</a>
       <a href="#projects" class="nav-link-2 w-nav-link">PROJECTS</a>
@@ -56,24 +60,24 @@
     </div>
   </div>
   <div id="projects" class="section-7 wf-section">
-    <div class="div-block-19-copy">
-      <div data-poster-url="https://uploads-ssl.webflow.com/62c17bc1f49c32e14cd178e7/62c4338d8db42175c0b7a803_CompressedVideo (2) (1)_2-poster-00001.jpg" data-video-urls="videos/Compressed_video.mp4" data-autoplay="true" data-loop="true" data-wf-ignore="true" class="background-video-5 w-background-video w-background-video-atom"><video id="61572f27-bbef-e5e4-c9df-d344e69c13f8-video" autoplay="" loop="" style="background-image:url(&quot;https://uploads-ssl.webflow.com/62c17bc1f49c32e14cd178e7/62c4338d8db42175c0b7a803_CompressedVideo (2) (1)_2-poster-00001.jpg&quot;)" muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover">
-          <source src="videos/Compressed_video.mp4" data-wf-ignore="true">
-          <source src="videos/Compressed_video.mp4" data-wf-ignore="true">
+    <div class="video1">
+      <div data-poster-url="https://uploads-ssl.webflow.com/62c17bc1f49c32e14cd178e7/62c4338d8db42175c0b7a803_CompressedVideo (2) (1)_2-poster-00001.jpg" data-video-urls="videos/background_video_passive.mp4" data-autoplay="true" data-loop="true" data-wf-ignore="true" class="background-video-5 w-background-video w-background-video-atom"><video id="61572f27-bbef-e5e4-c9df-d344e69c13f8-video" autoplay="" loop="" style="background-image:url(&quot;https://uploads-ssl.webflow.com/62c17bc1f49c32e14cd178e7/62c4338d8db42175c0b7a803_CompressedVideo (2) (1)_2-poster-00001.jpg&quot;)" muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover">
+          <source src="videos/background_video_passive.mp4" data-wf-ignore="true">
+          <source src="videos/background_video_passive.mp4" data-wf-ignore="true">
         </video></div>
     </div>
     <div class="div-block-17">
       <div class="text-block-3-copy textbody-copy test-copy">PROJECTS</div>
       <div class="container-6">
         <div class="pricing-wrapper">
-          <div id="w-node-_4c28239c-adc3-f9b0-f829-2c653b733f28-646812b4" data-w-id="4c28239c-adc3-f9b0-f829-2c653b733f28" class="pricing-card"><img src="images/dashboard.png" loading="lazy" srcset="images/dashboard-p-500.png 500w, images/dashboard-p-800.png 800w, images/dashboard-p-1080.png 1080w, images/dashboard-p-1600.png 1600w, images/dashboard-p-2000.png 2000w, images/dashboard.png 2095w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 86vw, (max-width: 991px) 319.9921875px, 256.6484375px" alt="" class="pricing-image">
+          <div id="w-node-_4c28239c-adc3-f9b0-f829-2c653b733f28-646812b4" data-w-id="4c28239c-adc3-f9b0-f829-2c653b733f28" class="pricing-card"><img src="images/dashboard.png" loading="lazy" srcset="images/dashboard-p-500.png 500w, images/dashboard-p-800.png 800w, images/dashboard-p-1080.png 1080w, images/dashboard-p-1600.png 1600w, images/dashboard-p-2000.png 2000w, images/dashboard.png 2095w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 86vw, (max-width: 991px) 319.984375px, 256.640625px" alt="" class="pricing-image">
             <h2 class="pricing-title">RESPONSIVE<br>YOUTHCARE DASHBOARD</h2>
             <div class="pricing-subtitle">January, 2022</div>
             <a href="#" class="button-primary outline-button w-button">Show</a>
             <div class="pricing-divider"></div>
             <p class="paragraph">In collaboration with the municipality of Oosterhout, I have made a responsive dashboard to visualize their youth care dataset.</p>
           </div>
-          <div id="w-node-_4c28239c-adc3-f9b0-f829-2c653b733f48-646812b4" class="pricing-card featured-pricing"><img src="images/prototype.png" loading="lazy" srcset="images/prototype-p-500.png 500w, images/prototype-p-800.png 800w, images/prototype-p-1080.png 1080w, images/prototype-p-1600.png 1600w, images/prototype-p-2000.png 2000w, images/prototype.png 2591w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 86vw, (max-width: 991px) 319.9921875px, 256.65625px" alt="" class="pricing-image">
+          <div id="w-node-_4c28239c-adc3-f9b0-f829-2c653b733f48-646812b4" class="pricing-card featured-pricing"><img src="images/prototype.png" loading="lazy" srcset="images/prototype-p-500.png 500w, images/prototype-p-800.png 800w, images/prototype-p-1080.png 1080w, images/prototype-p-1600.png 1600w, images/prototype-p-2000.png 2000w, images/prototype.png 2591w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 86vw, (max-width: 991px) 319.96875px, 256.65625px" alt="" class="pricing-image">
             <h2 class="pricing-title">RESPONIBLE AI <br>APP PROTOTYPE</h2>
             <div class="pricing-subtitle">April, 2022</div>
             <a href="project.html" class="button-primary outline-button w-button">Show</a>
@@ -81,7 +85,7 @@
             <div class="pricing-tag">Featured</div>
             <p class="paragraph">I made a prototype of an app to teach AI specialists, how to implement certain fairness &amp; explainability methods into their deep learning model by proposing a framework using my own model as an example.<br></p>
           </div>
-          <div id="w-node-_4c28239c-adc3-f9b0-f829-2c653b733f70-646812b4" data-w-id="4c28239c-adc3-f9b0-f829-2c653b733f70" class="pricing-card"><img src="images/site.png" loading="lazy" srcset="images/site-p-500.png 500w, images/site-p-800.png 800w, images/site-p-1080.png 1080w, images/site.png 1457w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 86vw, (max-width: 991px) 319.984375px, 256.6640625px" alt="" class="pricing-image">
+          <div id="w-node-_4c28239c-adc3-f9b0-f829-2c653b733f70-646812b4" data-w-id="4c28239c-adc3-f9b0-f829-2c653b733f70" class="pricing-card"><img src="images/site.png" loading="lazy" srcset="images/site-p-500.png 500w, images/site-p-800.png 800w, images/site-p-1080.png 1080w, images/site.png 1457w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 86vw, (max-width: 991px) 319.96875px, 256.65625px" alt="" class="pricing-image">
             <h2 class="pricing-title">CUSTOMER WEBSITE<br>FOR A BEAUTY SALON</h2>
             <div class="pricing-subtitle">2021</div>
             <a href="#" class="button-primary outline-button w-button">Show</a>
@@ -96,10 +100,10 @@
       <div class="div-block-18"><img src="images/linkedin.png" loading="lazy" srcset="images/linkedin-p-500.png 500w, images/linkedin.png 512w" sizes="(max-width: 479px) 94vw, 70px" alt="" class="image-3 imagenav"><img src="images/mail.png" loading="lazy" srcset="images/mail-p-500.png 500w, images/mail.png 512w" sizes="(max-width: 479px) 94vw, 70px" alt="" class="image-3 imagenav"><img src="images/GitHub-Mark-120px-plus.png" loading="lazy" alt="" class="image-3 imagenav"></div>
       <p class="paragraph-2">Michael Nederhoed | Portfolio Showcase</p>
     </div>
-    <div class="div-block-19">
-      <div data-poster-url="https://uploads-ssl.webflow.com/62c17bc1f49c32e14cd178e7/62c4338d8db42175c0b7a803_CompressedVideo (2) (1)_2-poster-00001.jpg" data-video-urls="videos/Compressed_video.mp4" data-autoplay="true" data-loop="true" data-wf-ignore="true" class="background-video-4 w-background-video w-background-video-atom"><video id="4ea85baf-bb23-ff8d-825c-853197fc5127-video" autoplay="" loop="" style="background-image:url(&quot;https://uploads-ssl.webflow.com/62c17bc1f49c32e14cd178e7/62c4338d8db42175c0b7a803_CompressedVideo (2) (1)_2-poster-00001.jpg&quot;)" muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover">
-          <source src="videos/Compressed_video.mp4" data-wf-ignore="true">
-          <source src="videos/Compressed_video.mp4" data-wf-ignore="true">
+    <div class="video2">
+      <div data-poster-url="https://uploads-ssl.webflow.com/62c17bc1f49c32e14cd178e7/62c4338d8db42175c0b7a803_CompressedVideo (2) (1)_2-poster-00001.jpg" data-video-urls="videos/background_video_passive.mp4" data-autoplay="true" data-loop="true" data-wf-ignore="true" class="background-video-4 w-background-video w-background-video-atom"><video id="4ea85baf-bb23-ff8d-825c-853197fc5127-video" autoplay="" loop="" style="background-image:url(&quot;https://uploads-ssl.webflow.com/62c17bc1f49c32e14cd178e7/62c4338d8db42175c0b7a803_CompressedVideo (2) (1)_2-poster-00001.jpg&quot;)" muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover">
+          <source src="videos/background_video_passive.mp4" data-wf-ignore="true">
+          <source src="videos/background_video_passive.mp4" data-wf-ignore="true">
         </video></div>
     </div>
   </div>
