--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Sat Sep 03 2022 14:49:58 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sat Sep 03 2022 15:02:39 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="62e7a6bd8c02e0fa05c9f6e6" data-wf-site="62c17bc1f49c32e14cd178e7">
 <head>
   <meta charset="utf-8">
@@ -78,7 +78,7 @@
     <div class="div-block-6">
       <div id="me" class="div-block-11">
         <h1 class="heading-2 home">This is Me</h1>
-        <div class="div-block-13"><img src="images/1-min.jpg" loading="lazy" id="w-node-b14eb39a-6ea8-ce51-a23f-86d331192498-05c9f6e6" srcset="images/1-min-p-500.jpeg 500w, images/1-min-p-800.jpeg 800w, images/1-min-p-1080.jpeg 1080w, images/1-min-p-1600.jpeg 1600w, images/1-min-p-2000.jpeg 2000w, images/1-min.jpg 2554w" sizes="(max-width: 479px) 61vw, (max-width: 767px) 34vw, 150px" alt="me" class="image-5">
+        <div class="div-block-13"><img src="images/Me_small.png" loading="lazy" id="w-node-b14eb39a-6ea8-ce51-a23f-86d331192498-05c9f6e6" alt="" class="image-5">
           <div class="div-block-14"><img src="images/straight-quotes.png" loading="lazy" alt="" class="image-6"><img src="images/straight-quotes.png" loading="lazy" alt="" class="image-7">
             <div class="text-block-5"><span class="text-span mespan"><strong class="bold-text-copy">My goal is to help organizations navigate through the new future of intelligence <br></strong></span></div>
           </div>
@@ -96,14 +96,14 @@
         <h2 id="project-title" class="h2 projects">Showcase Projects</h2>
         <div id="project" class="container-6">
           <div class="pricing-wrapper">
-            <div id="w-node-_4c28239c-adc3-f9b0-f829-2c653b733f28-05c9f6e6" data-w-id="4c28239c-adc3-f9b0-f829-2c653b733f28" class="pricing-card orange"><img src="images/Dashboard_small.webp" loading="lazy" srcset="images/Dashboard_small-p-500.png 500w, images/Dashboard_small.webp 612w" alt="dashboard photo" sizes="100vw" class="pricing-image">
+            <div id="w-node-_4c28239c-adc3-f9b0-f829-2c653b733f28-05c9f6e6" data-w-id="4c28239c-adc3-f9b0-f829-2c653b733f28" class="pricing-card orange"><img src="images/Dashboard_small.webp" loading="lazy" srcset="images/Dashboard_small-p-500.png 500w, images/Dashboard_small.webp 612w" alt="dashboard photo" sizes="(max-width: 991px) 100vw, 256.640625px" class="pricing-image">
               <h3 class="pricing-title">RESPONSIVE<br>YOUTHCARE DASHBOARD</h3>
               <div class="pricing-subtitle">January, 2022</div>
               <a href="dashboard.html" class="button-primary outline-button w-button">Show</a>
               <div class="pricing-divider"></div>
               <p class="paragraph">In collaboration with the municipality of Oosterhout, I have made a responsive dashboard to visualize and analyze their youth care dataset.</p>
             </div>
-            <div id="w-node-_4c28239c-adc3-f9b0-f829-2c653b733f48-05c9f6e6" class="pricing-card featured-pricing"><img src="images/prototype.webp" loading="lazy" srcset="images/prototype-p-500.png 500w, images/prototype-p-800.png 800w, images/prototype-p-1080.png 1080w, images/prototype-p-1600.png 1600w, images/prototype-p-2000.png 2000w, images/prototype.webp 2591w" alt="app prototype photo" sizes="100vw" class="pricing-image">
+            <div id="w-node-_4c28239c-adc3-f9b0-f829-2c653b733f48-05c9f6e6" class="pricing-card featured-pricing"><img src="images/prototype.webp" loading="lazy" srcset="images/prototype-p-500.png 500w, images/prototype-p-800.png 800w, images/prototype-p-1080.png 1080w, images/prototype-p-1600.png 1600w, images/prototype-p-2000.png 2000w, images/prototype.webp 2591w" alt="app prototype photo" sizes="(max-width: 991px) 100vw, 256.65625px" class="pricing-image">
               <h3 class="pricing-title">RESPONSIBLE AI <br>APP PROTOTYPE</h3>
               <div class="pricing-subtitle">April, 2022</div>
               <a href="project.html" class="button-primary outline-button w-button">Show</a>
@@ -111,7 +111,7 @@
               <div class="pricing-tag">Featured</div>
               <p class="paragraph">By proposing a framework while using my own algorithm as an example, I created a prototype of an app to teach AI specialists how to utilize various fairness and explainability methods in their deep learning models.<br></p>
             </div>
-            <div id="w-node-_4c28239c-adc3-f9b0-f829-2c653b733f70-05c9f6e6" data-w-id="4c28239c-adc3-f9b0-f829-2c653b733f70" class="pricing-card"><img src="images/site.webp" loading="lazy" srcset="images/site-p-500.png 500w, images/site-p-800.png 800w, images/site-p-1080.png 1080w, images/site.webp 1457w" alt="customer website photo" sizes="100vw" class="pricing-image">
+            <div id="w-node-_4c28239c-adc3-f9b0-f829-2c653b733f70-05c9f6e6" data-w-id="4c28239c-adc3-f9b0-f829-2c653b733f70" class="pricing-card"><img src="images/site.webp" loading="lazy" srcset="images/site-p-500.png 500w, images/site-p-800.png 800w, images/site-p-1080.png 1080w, images/site.webp 1457w" alt="customer website photo" sizes="(max-width: 991px) 100vw, 256.65625px" class="pricing-image">
               <h3 class="pricing-title">CUSTOMER WEBSITE<br>FOR A BEAUTY SALON</h3>
               <div class="pricing-subtitle">2021</div>
               <a href="website.html" class="button-primary outline-button w-button">Show</a>
@@ -122,7 +122,7 @@
         </div>
         <div class="phone-project">
           <div class="pricing-wrapper">
-            <div id="w-node-_5c93a22d-ceca-bfca-2507-296e4ede5a67-05c9f6e6" class="pricing-card featured-pricing"><img src="images/prototype.webp" loading="lazy" srcset="images/prototype-p-500.png 500w, images/prototype-p-800.png 800w, images/prototype-p-1080.png 1080w, images/prototype-p-1600.png 1600w, images/prototype-p-2000.png 2000w, images/prototype.webp 2591w" alt="app prototype image" sizes="100vw" class="pricing-image">
+            <div id="w-node-_5c93a22d-ceca-bfca-2507-296e4ede5a67-05c9f6e6" class="pricing-card featured-pricing"><img src="images/prototype.webp" loading="lazy" srcset="images/prototype-p-500.png 500w, images/prototype-p-800.png 800w, images/prototype-p-1080.png 1080w, images/prototype-p-1600.png 1600w, images/prototype-p-2000.png 2000w, images/prototype.webp 2591w" alt="app prototype image" sizes="(max-width: 479px) 100vw, (max-width: 767px) 73vw, (max-width: 991px) 319.96875px, 100vw" class="pricing-image">
               <h2 class="pricing-title">RESPONIBLE AI <br>APP PROTOTYPE</h2>
               <div class="pricing-subtitle">April, 2022</div>
               <a href="project.html" class="button-primary outline-button w-button">Show</a>
@@ -130,14 +130,14 @@
               <div class="pricing-tag">Featured</div>
               <p class="paragraph">By proposing a framework while using my own algorithm as an example, I created a prototype of an app to teach AI specialists how to utilize various fairness and explainability methods in their deep learning models.<br></p>
             </div>
-            <div id="w-node-_9f52886e-e0da-762f-3310-3ed0e954d038-05c9f6e6" class="pricing-card orange"><img src="images/Dashboard_small.webp" loading="lazy" srcset="images/Dashboard_small-p-500.png 500w, images/Dashboard_small.webp 612w" alt="dashboard image" sizes="100vw" class="pricing-image">
+            <div id="w-node-_9f52886e-e0da-762f-3310-3ed0e954d038-05c9f6e6" class="pricing-card orange"><img src="images/Dashboard_small.webp" loading="lazy" srcset="images/Dashboard_small-p-500.png 500w, images/Dashboard_small.webp 612w" alt="dashboard image" sizes="(max-width: 479px) 100vw, (max-width: 767px) 73vw, (max-width: 991px) 319.984375px, 100vw" class="pricing-image">
               <h3 class="pricing-title">RESPONSIVE<br>YOUTHCARE DASHBOARD</h3>
               <div class="pricing-subtitle">January, 2022</div>
               <a href="dashboard.html" class="button-primary outline-button w-button">Show</a>
               <div class="pricing-divider"></div>
               <p class="paragraph">In collaboration with the municipality of Oosterhout, I have made a responsive dashboard to visualize and analyze their youth care dataset.</p>
             </div>
-            <div id="w-node-_5c93a22d-ceca-bfca-2507-296e4ede5a77-05c9f6e6" class="pricing-card"><img src="images/site.webp" loading="lazy" srcset="images/site-p-500.png 500w, images/site-p-800.png 800w, images/site-p-1080.png 1080w, images/site.webp 1457w" alt="customer website image" sizes="100vw" class="pricing-image">
+            <div id="w-node-_5c93a22d-ceca-bfca-2507-296e4ede5a77-05c9f6e6" class="pricing-card"><img src="images/site.webp" loading="lazy" srcset="images/site-p-500.png 500w, images/site-p-800.png 800w, images/site-p-1080.png 1080w, images/site.webp 1457w" alt="customer website image" sizes="(max-width: 479px) 100vw, (max-width: 767px) 73vw, (max-width: 991px) 319.96875px, 100vw" class="pricing-image">
               <h2 class="pricing-title">CUSTOMER WEBSITE<br>FOR A BEAUTY SALON</h2>
               <div class="pricing-subtitle">2021</div>
               <a href="website.html" class="button-primary outline-button w-button">Show</a>
