--- a/dashboard.html
+++ b/dashboard.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Sat Sep 03 2022 15:02:39 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sat Sep 03 2022 15:21:53 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="62e7a5a0f756730c78355b7b" data-wf-site="62c17bc1f49c32e14cd178e7">
 <head>
   <meta charset="utf-8">
@@ -44,8 +44,8 @@
           </div>
           <nav role="navigation" class="nav-menu-2 w-nav-menu">
             <a href="index.html" class="nav-link-7 w-nav-link">HOME</a>
-            <a href="/#Menu" class="nav-link-7 w-nav-link">THIS IS ME</a>
-            <a href="/#project" class="nav-link-7 dividernavphone w-nav-link">PROJECTS</a>
+            <a href="https://michaelned.github.io/PortfolioMichael/index.html#Menu" class="nav-link-7 w-nav-link">THIS IS ME</a>
+            <a href="https://michaelned.github.io/PortfolioMichael/index.html#project" class="nav-link-7 dividernavphone w-nav-link">PROJECTS</a>
             <a href="#About-dashboard" class="nav-link-7 navdividerphonelower w-nav-link">ABOUT</a>
             <a href="#DemoDashTitle" class="nav-link-7 w-nav-link">DEMO</a>
             <a href="#contact" class="nav-link-8 w-nav-link">CONTACT ME</a>
@@ -67,8 +67,8 @@
         <a href="https://github.com/MichaelNed/PortfolioMichael" target="_blank" class="link-block-2 w-inline-block"><img alt="GitHub button" loading="lazy" src="images/GitHub-Mark-64px.webp" class="image-3 imagenav-copy image-3-copy"></a>
       </nav>
       <a href="index.html" class="nav-link-2 w-nav-link">HOME</a>
-      <a href="/#me" class="nav-link-2 w-nav-link">THIS IS ME</a>
-      <a href="/#project" class="nav-link-2 dividernav w-nav-link">PROJECTS</a>
+      <a href="https://michaelned.github.io/PortfolioMichael/index.html#me" class="nav-link-2 w-nav-link">THIS IS ME</a>
+      <a href="https://michaelned.github.io/PortfolioMichael/index.html#project" class="nav-link-2 dividernav w-nav-link">PROJECTS</a>
       <a href="#About-dashboard" class="nav-link-2 dividernav2 w-nav-link">ABOUT</a>
       <a href="#Demo-expenses" class="nav-link-2 w-nav-link">DEMO</a>
       <div class="div-block-10-wbes">
