--- a/project.html
+++ b/project.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Sat Sep 03 2022 15:02:39 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sat Sep 03 2022 15:21:53 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="62e7a5a0f756736755355b7c" data-wf-site="62c17bc1f49c32e14cd178e7">
 <head>
   <meta charset="utf-8">
@@ -26,8 +26,8 @@
       <div class="container-8 w-container">
         <nav role="navigation" class="nav-menu-2 w-nav-menu">
           <a href="index.html" class="nav-link-7 w-nav-link">HOME</a>
-          <a href="/#Menu" class="nav-link-7 w-nav-link">THIS IS ME</a>
-          <a href="/#project" class="nav-link-7 dividernavphone w-nav-link">PROJECTS</a>
+          <a href="https://michaelned.github.io/PortfolioMichael/index.html#Menu" class="nav-link-7 w-nav-link">THIS IS ME</a>
+          <a href="https://michaelned.github.io/PortfolioMichael/index.html#project" class="nav-link-7 dividernavphone w-nav-link">PROJECTS</a>
           <a href="#Demo2" class="nav-link-7 navdividerphonelower w-nav-link">DEMO</a>
           <a href="#XAI" class="nav-link-7 w-nav-link">XAI</a>
           <a href="#transparancy" class="nav-link-7 w-nav-link">ALGORITHM</a>
@@ -59,8 +59,8 @@
         <a href="https://github.com/MichaelNed/PortfolioMichael" target="_blank" class="link-block-2 w-inline-block"><img loading="lazy" src="images/GitHub-Mark-64px.webp" alt="Github button" class="image-3 imagenav-copy image-3-copy"></a>
       </nav>
       <a href="index.html" class="nav-link-2 w-nav-link">HOME</a>
-      <a href="/#me" class="nav-link-2 w-nav-link">THIS IS ME</a>
-      <a href="/#project" class="nav-link-2 dividernav w-nav-link">PROJECTS</a>
+      <a href="https://michaelned.github.io/PortfolioMichael/index.html#me" class="nav-link-2 w-nav-link">THIS IS ME</a>
+      <a href="https://michaelned.github.io/PortfolioMichael/index.html#contact" class="nav-link-2 dividernav w-nav-link">PROJECTS</a>
       <a href="#Demo2" class="nav-link-2 dividernav2 w-nav-link">DEMO</a>
       <a href="#XAI" class="nav-link-2 w-nav-link">XAI</a>
       <div class="div-proj1-icon">
