--- a/website.html
+++ b/website.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Sat Sep 03 2022 15:02:39 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sat Sep 03 2022 15:21:53 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="62e7a5a0f756736981355b7d" data-wf-site="62c17bc1f49c32e14cd178e7">
 <head>
   <meta charset="utf-8">
@@ -44,8 +44,8 @@
           </div>
           <nav role="navigation" class="nav-menu-2 w-nav-menu">
             <a href="index.html" class="nav-link-7 w-nav-link">HOME</a>
-            <a href="/#Menu" class="nav-link-7 w-nav-link">THIS IS ME</a>
-            <a href="/#project" class="nav-link-7 dividernavphone w-nav-link">PROJECTS</a>
+            <a href="https://michaelned.github.io/PortfolioMichael/index.html#Menu" class="nav-link-7 w-nav-link">THIS IS ME</a>
+            <a href="https://michaelned.github.io/PortfolioMichael/index.html#project" class="nav-link-7 dividernavphone w-nav-link">PROJECTS</a>
             <a href="#Brand" class="nav-link-7 navdividerphonelower w-nav-link">BRAND</a>
             <a href="#Design" class="nav-link-7 w-nav-link">DESIGN</a>
             <a href="#contact" class="nav-link-8 w-nav-link">CONTACT ME</a>
@@ -67,8 +67,8 @@
         <a href="https://github.com/MichaelNed/PortfolioMichael" target="_blank" class="link-block-2 w-inline-block"><img loading="lazy" src="images/GitHub-Mark-64px.webp" alt="Github button" class="image-3 imagenav-copy image-3-copy"></a>
       </nav>
       <a href="index.html" class="nav-link-2 w-nav-link">HOME</a>
-      <a href="/#me" class="nav-link-2 w-nav-link">THIS IS ME</a>
-      <a href="/#project" class="nav-link-2 dividernav w-nav-link">PROJECTS</a>
+      <a href="https://michaelned.github.io/PortfolioMichael/index.html#me" class="nav-link-2 w-nav-link">THIS IS ME</a>
+      <a href="https://michaelned.github.io/PortfolioMichael/index.html#project" class="nav-link-2 dividernav w-nav-link">PROJECTS</a>
       <a href="#Brand" class="nav-link-2 dividernav2 w-nav-link">BRAND</a>
       <a href="#Design" class="nav-link-2 w-nav-link">DESIGN</a>
       <div class="div-block-10-wbes">
@@ -108,7 +108,7 @@
     </div>
     <h2 id="Design" class="header-website second">Design Choice</h2>
     <p class="paragraph-3">In order to achieve the best fit, the style was developed in close partnership with the business. The Business wanted a streamlined and modern look, where the customer knows where to find the needed information at a glance.</p>
-    <div class="div-block-33"><img src="images/Website_screen.webp" loading="lazy" srcset="images/Website_screen-p-500.png 500w, images/Website_screen-p-800.png 800w, images/Website_screen-p-1080.png 1080w, images/Website_screen-p-1600.png 1600w, images/Website_screen-p-2000.png 2000w, images/Website_screen.webp 2250w" alt="page of website shown on modern screen" sizes="100vw" class="image-13"></div>
+    <div class="div-block-33"><img src="images/Website_screen.webp" loading="lazy" srcset="images/Website_screen-p-500.png 500w, images/Website_screen-p-800.png 800w, images/Website_screen-p-1080.png 1080w, images/Website_screen-p-1600.png 1600w, images/Website_screen-p-2000.png 2000w, images/Website_screen.webp 2250w" alt="page of website shown on modern screen" sizes="(max-width: 767px) 99vw, (max-width: 1279px) 100vw, 2461.90625px" class="image-13"></div>
     <div id="Footer" class="footer">
       <div id="contact" class="text-block-7">LET&#x27;S CONNECT</div>
       <div class="div-block-58">
