--- a/project.html
+++ b/project.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Sat Sep 03 2022 15:21:53 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sat Sep 03 2022 15:28:18 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="62e7a5a0f756736755355b7c" data-wf-site="62c17bc1f49c32e14cd178e7">
 <head>
   <meta charset="utf-8">
@@ -60,7 +60,7 @@
       </nav>
       <a href="index.html" class="nav-link-2 w-nav-link">HOME</a>
       <a href="https://michaelned.github.io/PortfolioMichael/index.html#me" class="nav-link-2 w-nav-link">THIS IS ME</a>
-      <a href="https://michaelned.github.io/PortfolioMichael/index.html#contact" class="nav-link-2 dividernav w-nav-link">PROJECTS</a>
+      <a href="https://michaelned.github.io/PortfolioMichael/index.html#project" class="nav-link-2 dividernav w-nav-link">PROJECTS</a>
       <a href="#Demo2" class="nav-link-2 dividernav2 w-nav-link">DEMO</a>
       <a href="#XAI" class="nav-link-2 w-nav-link">XAI</a>
       <div class="div-proj1-icon">
