--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Portfolio Showcase - Michael Nederhoed</title>
   <meta content="width=device-width, initial-scale=1" name="viewport">
+<meta name="image" property="og:image" content="preview.png">
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
   <link href="css/mn-showcase.webflow.css" rel="stylesheet" type="text/css">
