--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html><!--  Last Published: Sat Sep 03 2022 15:21:53 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sat Sep 03 2022 16:05:14 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="62e7a6bd8c02e0fa05c9f6e6" data-wf-site="62c17bc1f49c32e14cd178e7">
 <head>
   <meta charset="utf-8">
   <title>Portfolio Showcase - Michael Nederhoed</title>
   <meta content="width=device-width, initial-scale=1" name="viewport">
-<meta name="image" property="og:image" content="preview.png">
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
   <link href="css/mn-showcase.webflow.css" rel="stylesheet" type="text/css">
@@ -17,6 +16,7 @@
   <style>
 *:focus { outline: none; }
 </style>
+  <meta name="image" property="og:image" content="preview.png">
 </head>
 <body class="body">
   <div class="div-block-39">
@@ -102,7 +102,7 @@
               <div class="pricing-subtitle">January, 2022</div>
               <a href="dashboard.html" class="button-primary outline-button w-button">Show</a>
               <div class="pricing-divider"></div>
-              <p class="paragraph">In collaboration with the municipality of Oosterhout, I have made a responsive dashboard to visualize and analyze their youth care dataset.</p>
+              <p class="paragraph">In collaboration with a local municipality, I have made a responsive dashboard to visualize and analyze their youth care dataset.</p>
             </div>
             <div id="w-node-_4c28239c-adc3-f9b0-f829-2c653b733f48-05c9f6e6" class="pricing-card featured-pricing"><img src="images/prototype.webp" loading="lazy" srcset="images/prototype-p-500.png 500w, images/prototype-p-800.png 800w, images/prototype-p-1080.png 1080w, images/prototype-p-1600.png 1600w, images/prototype-p-2000.png 2000w, images/prototype.webp 2591w" alt="app prototype photo" sizes="(max-width: 991px) 100vw, 256.65625px" class="pricing-image">
               <h3 class="pricing-title">RESPONSIBLE AI <br>APP PROTOTYPE</h3>
@@ -136,7 +136,7 @@
               <div class="pricing-subtitle">January, 2022</div>
               <a href="dashboard.html" class="button-primary outline-button w-button">Show</a>
               <div class="pricing-divider"></div>
-              <p class="paragraph">In collaboration with the municipality of Oosterhout, I have made a responsive dashboard to visualize and analyze their youth care dataset.</p>
+              <p class="paragraph">In collaboration with a local municipality, I have made a responsive dashboard to visualize and analyze their youth care dataset.</p>
             </div>
             <div id="w-node-_5c93a22d-ceca-bfca-2507-296e4ede5a77-05c9f6e6" class="pricing-card"><img src="images/site.webp" loading="lazy" srcset="images/site-p-500.png 500w, images/site-p-800.png 800w, images/site-p-1080.png 1080w, images/site.webp 1457w" alt="customer website image" sizes="(max-width: 479px) 100vw, (max-width: 767px) 73vw, (max-width: 991px) 319.96875px, 100vw" class="pricing-image">
               <h2 class="pricing-title">CUSTOMER WEBSITE<br>FOR A BEAUTY SALON</h2>
