--- a/project.html
+++ b/project.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Sat Sep 03 2022 15:28:18 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sat Sep 03 2022 16:05:14 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="62e7a5a0f756736755355b7c" data-wf-site="62c17bc1f49c32e14cd178e7">
 <head>
   <meta charset="utf-8">
@@ -18,6 +18,7 @@
   <style>
 *:focus { outline: none; }
 </style>
+  <meta name="image" property="og:image" content="preview.png">
 </head>
 <body class="body">
   <div class="div-block-4"></div>
