--- a/dashboard.html
+++ b/dashboard.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Sat Sep 03 2022 15:21:53 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sat Sep 03 2022 16:05:14 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="62e7a5a0f756730c78355b7b" data-wf-site="62c17bc1f49c32e14cd178e7">
 <head>
   <meta charset="utf-8">
@@ -18,6 +18,7 @@
   <style>
 *:focus { outline: none; }
 </style>
+  <meta name="image" property="og:image" content="preview.png">
 </head>
 <body class="body">
   <div class="div-block-4"></div>
@@ -86,7 +87,7 @@
         <p data-w-id="93294427-6a6e-4c0a-7ac6-dd2521a4566c" style="-webkit-transform:translate3d(0px, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0px, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0px, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0px, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="paragraph-5"><strong class="skillsdashboard">Data Science - Machine Learning - Business Intelligence - Data Visualization - Data Management - Dashboarding - PostgreSQL - PowerBI - Data Science - Machine Learning - Business Intelligence - Data Visualization - Data Management - Dashboarding - PostgreSQL - PowerBI - Data Science - Machine Learning - Business Intelligence - Data Visualization - Data Management - Dashboarding - PostgreSQL - PowerBI - </strong></p>
       </div>
       <h1 class="header-website dashboard">RESPONSIVE<br>YOUTH CARE DASHBOARD</h1>
-      <p class="paragraph-3">In partnership with the municipality of Oosterhout, I have made a responsive dashboard combined with machine learning to visualize &amp; analyze their youth care dataset and to help them improve their business processes. </p>
+      <p class="paragraph-3">In partnership with a local municipality, I have made a responsive dashboard combined with machine learning to visualize &amp; analyze their youth care dataset and to help them improve their business processes. </p>
       <div class="div-block-50">
         <div class="div-block-51">
           <div data-poster-url="videos/Dashboard1_priv-poster-00001.jpg" data-video-urls="videos/Dashboard1_priv-transcode.mp4,videos/Dashboard1_priv-transcode.webm" data-autoplay="true" data-loop="false" data-wf-ignore="true" class="background-video-10 w-background-video w-background-video-atom"><video id="0d0265a6-2a90-a40b-8688-f7d010cef61e-video" autoplay="" style="background-image:url(&quot;videos/Dashboard1_priv-poster-00001.jpg&quot;)" muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover">
@@ -154,7 +155,7 @@
     }
   }</style><img data-wf-bgvideo-fallback-img="true" src="documents/Dashboard2_priv.mp4" alt="">
             </noscript>
-            <div aria-live="polite"><button aria-controls="06b56595-d5ae-8779-3d47-5f626c3213bc-video" type="button" data-w-bg-video-control="true" class="w-backgroundvideo-backgroundvideoplaypausebutton play-pause-button-4 w-background-video--control"><span><img alt="Pause video" src="https://uploads-ssl.webflow.com/6022af993a6b2191db3ed10c/628299f8aa233b83918e24fd_Pause.svg" class="image-31"></span><span hidden=""><img alt="Play video" data-w-id="06b56595-d5ae-8779-3d47-5f626c3213c1" src="https://uploads-ssl.webflow.com/6022af993a6b2191db3ed10c/628298b20ae0236682d4b87f_Play-24.svg" class="image-30"></span></button></div><img src="images/Dashboard1-2.png" alt="expenses page of dashboard" style="opacity:1" sizes="(max-width: 479px) 296px, (max-width: 767px) 448px, (max-width: 991px) 717px, 896px" data-w-id="be99ddf9-1fcf-85f1-9216-9af7f59f34a7" loading="lazy" srcset="images/Dashboard1-2.png 500w, images/Dashboard1-2.png 800w, images/Dashboard1-2.png 1080w, images/Dashboard1-2.png 1600w, images/Dashboard1-2.png 2000w, images/Dashboard1-2.png 2600w">
+            <div aria-live="polite"><button aria-controls="06b56595-d5ae-8779-3d47-5f626c3213bc-video" type="button" data-w-bg-video-control="true" class="w-backgroundvideo-backgroundvideoplaypausebutton play-pause-button-4 w-background-video--control"><span><img alt="Pause video" src="https://uploads-ssl.webflow.com/6022af993a6b2191db3ed10c/628299f8aa233b83918e24fd_Pause.svg" class="image-31"></span><span hidden=""><img alt="Play video" data-w-id="06b56595-d5ae-8779-3d47-5f626c3213c1" src="https://uploads-ssl.webflow.com/6022af993a6b2191db3ed10c/628298b20ae0236682d4b87f_Play-24.svg" class="image-30"></span></button></div><img src="images/Dashboard1-2.png" alt="expenses page of dashboard" style="opacity:1" sizes="(max-width: 479px) 296px, (max-width: 767px) 448px, (max-width: 991px) 717px, 896px" data-w-id="be99ddf9-1fcf-85f1-9216-9af7f59f34a7" loading="lazy" srcset="images/Dashboard1-2-p-500.png 500w, images/Dashboard1-2-p-800.png 800w, images/Dashboard1-2-p-1080.png 1080w, images/Dashboard1-2-p-1600.png 1600w, images/Dashboard1-2-p-2000.png 2000w, images/Dashboard1-2-p-2600.png 2600w, images/Dashboard1-2.png 2627w">
           </div>
         </div>
         <div data-current="Tab 2" data-easing="ease" data-duration-in="0" data-duration-out="0" class="tabs-2 dashboard w-tabs">
